# YOLO_training

./: .gitignore  change_label.py  check.py  check_img.py  check_vid.py  convert.py  main.py  model_convert.py  model_tune.py  model_valid.py  pyproject.toml  valid.py  valid_test.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
